refactor: update deserialization
- toList를 collector없이 사용하도록 수정한걸 다시 콜렉터를 사용하도록 수정

#100